--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
     "slicemachine": "start-slicemachine"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@prismicio/client": "^7.20.3",
     "@prismicio/next": "^2.0.2",
     "@prismicio/react": "^3.2.2",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.4.0",
+    "@types/three": "^0.181.0",
     "clsx": "^2.1.1",
+    "gsap": "^3.13.0",
     "next": "16.0.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "three": "^0.181.0"
   },
   "devDependencies": {
     "@slicemachine/adapter-next": "^0.3.86",
@@ -30,6 +36,7 @@
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.7.1",
+    "r3f-perf": "^7.2.3",
     "slice-machine-ui": "^2.19.1",
     "tailwindcss": "^3.4.18",
     "typescript": "^5"
